Add status column in order table

--- a/client/public/orders.html
+++ b/client/public/orders.html
@@ -36,6 +36,7 @@
                 <th>OrderId</th>
                 <th>Order items</th>
                 <th>Created</th>
+                <th>Status</th>
                 <th>Total</th>
               </tr>
             </thead>
